--- a/NanoProject/app/src/main/res/layout/activity_main.xml
+++ b/NanoProject/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/switch_thumb_normal_material_light"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView android:text="@string/my_apps" android:layout_width="wrap_content"
