--- a/NanoProject/app/src/main/res/values/styles.xml
+++ b/NanoProject/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Base.V21.Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
     </style>
     
@@ -9,6 +9,10 @@
     <style name="textOnButton">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="movieDetailStyle">
+        <item name="android:textColor">#616161</item>
     </style>
 
 </resources>
