--- a/NanoProject/app/src/main/res/values/color.xml
+++ b/NanoProject/app/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="green">#26A69A</color>
+    <color name="App_green">#009688</color>
+    <color name="shadow_color">#BDBDBD</color>
 </resources>
