--- a/NanoProject/app/src/main/res/layout/grid_item_layout.xml
+++ b/NanoProject/app/src/main/res/layout/grid_item_layout.xml
@@ -1,4 +1,4 @@
-<com.explore.archana.nanoproject.customviews.CustomImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.explore.archana.nanoproject.ui.activity.customviews.CustomImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imageViewMoviePoster"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
