--- a/NanoProject/app/src/main/res/layout/movie_detail_activity.xml
+++ b/NanoProject/app/src/main/res/layout/movie_detail_activity.xml
@@ -3,5 +3,5 @@
     android:id="@+id/movie_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.explore.archana.nanoproject.activity.MovieDetailActivity"
+    tools:context="com.explore.archana.nanoproject.ui.activity.MovieDetailActivity"
     tools:ignore="MergeRootFrame" />
