--- a/NanoProject/app/src/main/res/layout/movielist_layout.xml
+++ b/NanoProject/app/src/main/res/layout/movielist_layout.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:horizontalSpacing="0dp"
-        android:numColumns="2"
+        android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="0dp" />
+        android:columnWidth="130dp" />
 
 </FrameLayout>
 
