--- a/NanoProject/app/src/main/res/layout/ratings_layout.xml
+++ b/NanoProject/app/src/main/res/layout/ratings_layout.xml
@@ -6,19 +6,19 @@
     android:weightSum="2">
 
     <ImageView
-        android:layout_weight="0.1"
         android:id="@+id/movie_tumb"
         android:layout_width="wrap_content"
         android:layout_height="180dp"
+        android:layout_weight="0.1"
         android:paddingTop="15dp" />
 
     <LinearLayout
-        android:layout_weight="1.9"
-        android:layout_toRightOf="@+id/movie_tumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:orientation="vertical">
+        android:layout_toRightOf="@+id/movie_tumb"
+        android:layout_weight="1.9"
+        android:orientation="vertical"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/textView_year"
@@ -44,13 +44,12 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
-        <Button
+        <ToggleButton
             android:id="@+id/button_markasfav"
-            android:layout_width="70dp"
-            android:background="#80CBC4"
-            style="@style/movieDetailStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="@string/button_favorate" />
+            style="@style/toggleButton"
+            android:background="@drawable/ic_toggle_bg"
+            android:checked="false" />
     </LinearLayout>
 </LinearLayout>
